--- a/project.properties
+++ b/project.properties
@@ -2,3 +2,5 @@ name=ISD
 dependencies.ArduinoJson=6.10.1
 dependencies.CryptoSuite=0.0.10
 dependencies.DHT=1.3.0
+dependencies.Adafruit_Sensor=1.0.2
+dependencies.Arduino=0.0.10
